--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "feather-icons": "^4.28.0",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "vue-feather": "^1.1.1",
+    "firebase": "^9.9.0",
     "vue": "^2.7.3",
     "vue-extend-layout": "^2.0.5",
+    "vue-feather": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.7.0",
     "vuex": "^3.4.0"
