--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "feather-icons": "^4.28.0",
+    "firebase": "^9.9.0",
     "vue": "^2.7.3",
     "vue-extend-layout": "^2.0.5",
     "vue-feather": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.7.0",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -29,6 +27,9 @@
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-standard": "^3.0.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
