--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "feather-icons": "^4.28.0",
-    "firebase": "^9.9.0",
+    "vue-country-flag": "^2.0.3",
     "vue": "^2.7.3",
     "vue-extend-layout": "^2.0.5",
     "vue-feather": "^1.1.1",
