--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.6.5",
     "feather-icons": "^4.28.0",
-    "vue-country-flag": "^2.0.3",
+    "vee-validate": "^3.4.5",
     "vue": "^2.7.3",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-country-flag": "^2.0.3",
     "vue-extend-layout": "^2.0.5",
     "vue-feather": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.7.0",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.1",
-    "@vue/cli-plugin-eslint": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
-    "@vue/eslint-config-standard": "^3.0.1",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
