--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
-    "feather-icons": "^4.28.0",
-    "vee-validate": "^3.4.5",
+    "core-js": "^3.26.0",
+    "feather-icons": "^4.29.0",
+    "firebase": "^9.12.1",
+    "vee-validate": "^4.7.1",
     "vue": "^2.7.3",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-country-flag": "^2.0.3",
-    "vue-extend-layout": "^2.0.5",
+    "vue-country-flag": "^2.3.2",
+    "vue-extend-layout": "^2.0.6",
     "vue-feather": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.7.0",
@@ -27,13 +28,13 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0",
+    "style-loader": "^3.3.1",
+    "vue-template-compiler": "^2.7.13"
   }
 }
